fixed swagger ui
